--- a/Day13.html
+++ b/Day13.html
@@ -31,6 +31,6 @@
   <h3>혜택</h3>
   <p class = "left"> a.수습기자 활동 중 소정의 활동비 지급<br>
   b.정기자로 진급하면 장학금 지급</p>
-  <img src = "mic.jpg">
+  <img src = "images/mic.jpg">
 </body>
 </html>
